Corrected the heading numbers of RAK2171

--- a/docs/use-the-network/devices/ready-to-use/rakwireless/rak2171.mdx
+++ b/docs/use-the-network/devices/ready-to-use/rakwireless/rak2171.mdx
@@ -20,7 +20,7 @@ RAK2171 WisNode TrackIt is a LoRaWAN GPS tracking device. It comes in a small fo
 
 RAK2171 supports multiple working modes and notification options. When used with RAK WisGate Edge Gateways and P2P mode, you can monitor your tracker on the application map, create geofences, and receive SOS and movement notifications. You can also configure the WisNode TrackIt to work with any third-party LoRaWAN network using the TrackIt application as a configuration tool.
 
-## Product Features
+### Product Features
 
 - MT2523 with built-in Bluetooth and GPS
 - SX1262 LoRa chip
@@ -95,7 +95,7 @@ Before you dive into registering the device in the Helium console and creating t
 6. After typing in the required keys, click **Save Device**, and you will see the registered device. As mentioned by the console, the initial join process takes about 20 minutes for the device to join, so be patient.
 
 
-## Create Datacake Integration
+### Create Datacake Integration
 
 
 1. While the device is joining, you can create the integration. Select **Integrations** from the menu in the left panel.
@@ -149,7 +149,7 @@ Before you dive into registering the device in the Helium console and creating t
 />
 
 
-## Connection Between Helium and Datacake
+#### Connection Between Helium and Datacake
 
 1. Now that the device is registered and the integration is created, you will need to make a connection between Helium and Datacake. Click **Flows** on the left menu.
 
@@ -186,7 +186,7 @@ Before you dive into registering the device in the Helium console and creating t
   )}
 />
 
-## Datacake Device Resignation
+#### Datacake Device Resignation
 
 1. You need to add the device to the **Datacake** console. Head to the **Devices** tab and click the **+ Add Device** button.
 
@@ -247,7 +247,7 @@ Now, your device is registered in Datacake.
 />
 
 
-## Configure the Device in Datacake
+### Configure the Device in Datacake
 
 1. You need to decode the raw data the device sends to Datacake for a more user-friendly preview. On the device page of the Datacake console, you can find different tabs like **Dashboard**, **History**, and **Downlinks**. For now, head on to the **Configuration** tab.
 
