--- a/docs/api/blockchain/introduction.mdx
+++ b/docs/api/blockchain/introduction.mdx
@@ -62,3 +62,10 @@ In order to improve caching the API may return an empty data array and a cursor.
 request more data.
 
 :::
+
+## Transaction Units
+
+All API endpoints which return a transaction value (i.e. `fee`, `amount`, etc) are represented in
+the base unit `bones`.
+
+The conversion rate is `100,000,000 bone` per `HNT`.
