--- a/docs/use-the-network/console/console-hosting-providers.mdx
+++ b/docs/use-the-network/console/console-hosting-providers.mdx
@@ -28,6 +28,6 @@ out to the given provider.
   [here](https://bit.ly/3JygTvn).
 - Foundation Console - For demo and educational purposes. Capped at 10 devices and a single
   Organization. Sign up [here](https://console.helium.com/).
-- Nova Console - contact sales@nova.xyz.
+- Nova Console - contact sales@nova-labs.com.
 - BrDot Console - Console Hosting Provider based in Brazil. For more information contact
   sales@brdot.co.
