--- a/docs/use-the-network/console/migrating-devices/migrating-devices.mdx
+++ b/docs/use-the-network/console/migrating-devices/migrating-devices.mdx
@@ -40,14 +40,14 @@ those existing devices and Orgs for 12 calendar months, but will not be able to 
 devices and Orgs.
 
 To continue with more than 1 Org / 10 devices after 12 months, you will need to work with a member
-of the ecosystem, host your own instance, or contact a team members at sales@nova.xyz.
+of the ecosystem, host your own instance, or contact a team members at sales@nova-labs.com.
 
 \*While an account is in an overage state with > 1 Org / 10 devices and a device or Org is deleted,
 additional devices or Orgs cannot be re-added.
 
 Users over the cap who would like to immediately add more devices/Organizations, or users who have
 not yet exceeded the cap but plan to do so, can reach out to members of the ecosystem, host their
-own instance, or contact sales@nova.xyz.
+own instance, or contact sales@nova-labs.com.
 
 :::
 
