--- a/docs/use-the-network/run-a-network-server/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console.mdx
@@ -124,7 +124,7 @@ MAGIC_SECRET_KEY=sk_live_XXXXXXXXXXXXXXXX
 You may get these from your [Magic Link dashboard](https://dashboard.magic.link/app/all_apps) upon
 selecting your app.
 
-#### Customize Console Branding (staging)
+#### Customize Console Branding
 
 Console Providers can customize their instance of Console UI including the ability to swap out images/logos, email content, and change footer links. 
 
