removed ‘$’ from all ‘$HNT’ references

--- a/docs/blockchain/blockchain.mdx
+++ b/docs/blockchain/blockchain.mdx
@@ -44,7 +44,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     <div class="col col--6">
       <p>
         The Helium Blockchain is based on a new, novel work algorithm called Proof of Coverage
-        (PoC), and rewards miners in $HNT, the native token of the Helium blockchain. Officially
+        (PoC), and rewards miners in HNT, the native token of the Helium blockchain. Officially
         launched on July 29, 2019, the Helium Blockchain powers{' '}
         <a href="https://explorer.helium.com">
           the largest, public, decentralized LoRaWAN Network in the world
@@ -75,8 +75,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Consensus Protocol
       </a>
       <a className="block" href="/blockchain/helium-token">
-        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> The Helium Token
-        ($HNT)
+        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> The Helium Token (HNT)
       </a>
       <a className="block" href="/blockchain/oracles">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Oracles
