--- a/docs/blockchain/consensus-protocol/consensus-protocol.mdx
+++ b/docs/blockchain/consensus-protocol/consensus-protocol.mdx
@@ -96,4 +96,4 @@ during the epoch.
 
 Each one of the above activities is recorded in a block using the `reward` transaction. At the
 completion of each epoch, all the individual `reward` transactions are grouped in a `rewards`
-transaction at which point all $HNT mined in that epoch are distributed.
+transaction at which point all HNT mined in that epoch are distributed.
