--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -19,7 +19,7 @@ reward basics.
 ## How Do Hotspots Earn Helium Tokens?
 
 The Helium blockchain rewards Hotspots for providing wireless coverage and verifying the Helium
-Network. Hotspots are rewarded in Helium Token, $HNT.
+Network. Hotspots are rewarded in Helium Token, HNT.
 
 Every epoch, the current consensus group mines approximately 30 blocks on the blockchain. In each
 block, Hotspots perform various types of work and are awarded according to the following
@@ -39,12 +39,12 @@ distribution:
 **_Do I Have To Actively Participate to Earn Rewards Once My Hotspot is Deployed?_**
 
 No. Once your Hotspot is completely deployed and fully synced with the Helium blockchain, you as the
-owner are not required to do anything else in order to earn $HNT. Your Hotspot will perform all of
+owner are not required to do anything else in order to earn HNT. Your Hotspot will perform all of
 the above activities on its own while it runs.
 
-## Target $HNT Production Per Epoch
+## Target HNT Production Per Epoch
 
-As of August 1, 2021 (the most-recent halving), the target production rate for new $HNT minted per
+As of August 1, 2021 (the most-recent halving), the target production rate for new HNT minted per
 month is `2,500,000`. This means that, if the blockchain performs as designed, it will produce
 `2,500,000` HNT per month. This target rate is based on the following two parameters, as defined in
 their specific chain variables:
@@ -65,7 +65,7 @@ the blockchain will produce `2,500,000` HNT per month. Per epoch, this equals ro
 ### What Are The Current Block and Epoch Times?
 
 At any point you can go to the [Helium blockchain Explorer](http://explorer.helium.com/) to view
-recent block and epoch statistics, past $HNT production numbers, and much more.
+recent block and epoch statistics, past HNT production numbers, and much more.
 
 ## HNT Distributions Per Epoch
 
@@ -98,7 +98,7 @@ is currently scheduled for **August 1, 2022.**
 As noted above,
 [HIP10 was activated on August 24th, 2020](https://github.com/helium/HIP/blob/master/0010-usage-based-data-transfer-rewards.md).
 HIP10 was introduced by Helium Community Member `hashc0de` and was adopted by the Helium Community.
-It ensures that $HNT is rewarded at a rate of 1:1 to the amount of Data Credits (DCs) routed by any
+It ensures that HNT is rewarded at a rate of 1:1 to the amount of Data Credits (DCs) routed by any
 given Hotspot per epoch. In doing so, the Network Data Transfer reward is proportional to the DC
 spent that epoch. This proportional relationship between Network Data Transfer reward type and DC is
 capped at 35% (607.6389 HNT). Therefore, if the DC burned doesn't equal the value of `607.6389` HNT,
