--- a/docs/lorawan-on-helium/lorawan-roaming/lorawan-roaming-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-roaming/lorawan-roaming-on-helium.mdx
@@ -16,7 +16,7 @@ without deploying their own infrastructure and capital.
 And thanks to the Helium blockchain, direct roaming integrations are very simple. Most importantly,
 major LNSes are roaming with the Helium Network, which means the public coverage the community is
 building is now being used by LoRa devices onboarded to other networks, and Hotspot operators get
-compensated in $HNT for routing these packets.
+compensated in HNT for routing these packets.
 
 For more information about the roaming services offering go [here](use-the-network/roaming).
 
