--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -13,7 +13,7 @@ Data Only Hotspots are eligible for **Network Data Transfer Rewards** but not **
 Rewards**.
 
 Since Data Only Hotspots do not earn Proof-of-Coverage rewards, they may be permissionlessly added
-to the blockchain. Once added to the blockchain and with location asserted, they will earn $HNT when
+to the blockchain. Once added to the blockchain and with location asserted, they will earn HNT when
 forwarding network data.
 
 | Rewards Type            | Data Only Hotspots | Full & Light Hotspots |
