--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -60,7 +60,7 @@ following properties:
 - Does not participate in Consensus Groups (relies on Validators for block production);
 - Will no longer depend on libp2p or "gossip", and instead use [gRPC](https://grpc.io/), a new
   framework to communicate between distributed systems;
-- Will be eligible to earn $HNT (see table below)
+- Will be eligible to earn HNT (see table below)
 
 In other words, the Light Hotspot software will allow the Hotspot to participate as a
 [Full Hotspot](/mine-hnt/full-hotspots), without the extra overhead of maintaining a local copy of
