--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -84,7 +84,7 @@ challenge creation rewards, as of May 11, 2022.
 The community has produced several models which should be instructive. Please do your own analysis
 before deciding to stake.
 
-- [Basic $HNT Projections Model](https://docs.google.com/spreadsheets/u/1/d/1C0Tsz31Qa2b8PHXrl0gMDh2_fXcd2qSWVgF0hmg9Hqg/edit#gid=63991307)
+- [Basic HNT Projections Model](https://docs.google.com/spreadsheets/u/1/d/1C0Tsz31Qa2b8PHXrl0gMDh2_fXcd2qSWVgF0hmg9Hqg/edit#gid=63991307)
 - [Helium Validator Rewards Forecasting with Validator Ramp Calculations](https://docs.google.com/spreadsheets/d/1E4XLpF-a3xo3ZtNpJzd9g6EcuMZ1nSKKvtmKy_LVjhE/edit#gid=1705424601)
 
 **When can I get my validator rewards?**
