--- a/docs/mine-hnt/validators/penalties.mdx
+++ b/docs/mine-hnt/validators/penalties.mdx
@@ -14,8 +14,8 @@ group including verifying transactions and adding new blocks to the blockchain. 
 play an important role in the expansion, stability and success of the Helium network moving forward,
 it's critical that community run Validators meet the performance requirements of their role.
 
-The consensus group is made up of Validator nodes that are rewarded with $HNT for working together
-to verify transactions and producing blocks.
+The consensus group is made up of Validator nodes that are rewarded with HNT for working together to
+verify transactions and producing blocks.
 
 However, if a Validator node prevents the consensus group from performing its task, for example if
 it provides insufficient computing resources or has a weak network connection (equally strong
