--- a/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
+++ b/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
@@ -37,8 +37,8 @@ the consensus group. The target time for an epoch is currently `30 blocks`, as d
 `election_interval` chain variable. Approximately every 30 blocks mined marks the passing of an
 epoch, after which a new group of Validators is elected to form the next consensus group. Mining
 rewards are distributed per epoch (as opposed to per block in most blockchain-based systems). At the
-conclusion of each epoch, the consensus group will distribute all the $HNT produced in that block
-via the `rewards` transaction.
+conclusion of each epoch, the consensus group will distribute all the HNT produced in that block via
+the `rewards` transaction.
 
 ### Transactions
 
@@ -74,24 +74,24 @@ submitted and confirmed. The following is a list of the supported transactions:
 - `data credits` - Burn HNT for DCs at the current oracle price and deliver them to the target
   wallet address.
 - `genesis gateway` - Used to define the initial group of Miners that bootstrapped the blockchain.
-- `multi-payment` - Used to send $HNT from one wallet to multiple wallets.
+- `multi-payment` - Used to send HNT from one wallet to multiple wallets.
 - `OUI` - Create an Organization Unique Identifier (OUI) for a new router on the Helium network. In
   the Helium blockchain, Miners forward packets to Routers that own them based on their OUI as
   stored in the blockchain.
-- `payment` - Used to send $HNT from one wallet to another.
+- `payment` - Used to send HNT from one wallet to another.
 - `proof of coverage receipts` - The result of a PoC submitted to the network upon completion.
 - `redeem hashed timelock` - Redeem the transaction created using the `create hashed timelock`
   transaction.
 - `reward` - A token payout for a specific event on the network such as submitting a valid proof of
   coverage request, participating in a consensus group, etc.
-- `rewards` - Bundles multiple reward transactions at the end of each epoch and distributes all $HNT
+- `rewards` - Bundles multiple reward transactions at the end of each epoch and distributes all HNT
   produced in that block to wallets that have earned them.
 - `routing` - Update the routing information associated with an OUI.
 - `security coinbase` - Distribution of security tokens in the genesis block.
 - `security exchange` - The transfer of security tokens from one address to another.
 - `state channel open` - Opens a new state channel on a Helium Router.
 - `state channel close` - Closes a specific state channel on a Helium Router.
-- `token burn exchange rate` - Change the exchange rate for burning $HNT to DCs.
+- `token burn exchange rate` - Change the exchange rate for burning HNT to DCs.
 - `stake validator` - Stake a new Validator on the Helium Network.
 - `transfer validator` - Transfer a staked Validator to a new owner or a new Validator.
 - `unstake validator` - Unstake a previously staked Validator.
