--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -160,7 +160,7 @@ Dragino LGT-92, but the steps are effectively the same for any mapping device.
 - RAK Wireless RAK7200
   - [Product page](https://store.rakwireless.com/products/rak7200-lpwan-tracker?variant=29669491867693)
 
-### DIY mappers
+### DIY Mappers
 
 Flash your own code, add the device to your Helium Console, and spend your own Data Credits. Setting
 up a mapper from your own dev board is a great way to learn about LoRaWAN devices on the Helium
