--- a/docs/use-the-network/devices/ready-to-use/dragino/lt22222-l.mdx
+++ b/docs/use-the-network/devices/ready-to-use/dragino/lt22222-l.mdx
@@ -20,9 +20,11 @@ LoRaWAN I/O controller.
 
 - [Product Page](http://www.dragino.com/products/lora-lorawan-end-node/item/156-lt-22222-l.html)
 - [Datasheet](http://www.dragino.com/downloads/index.php?dir=LT_LoRa_IO_Controller/LT22222-L/)
+- [Walkthrough](https://github.com/ilovespectra/ilovespectra/tree/main/LT-22222-L)
 
 ### Specifications
 
 ---
 
 Content generated from [LoRaWAN-devices](https://github.com/TheThingsNetwork/lorawan-devices)
+
