Added optimization tips
cleaned up import a bit (If this is synced and will alter the docusaurus, those edits can be discarded)

--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -22,16 +22,16 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
           <div>
             <a href="/mine-hnt/full-hotspots">
               <span class="badge badge--secondary">Approved Makers</span>
-            </a>
+            </a><br>
             <a href="/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing">
               <span class="badge badge--secondary">Maker Approval</span>
-            </a>
+            </a><br>
             <a href="/mine-hnt/maker-apps">
               <span class="badge badge--secondary">Maker Apps</span>
-            </a>
+            </a><br>
             <a href="/mine-hnt/understanding-hotspot-status">
               <span class="badge badge--secondary">Understanding Hotspot Status</span>
-            </a>
+            </a><br>
             <a href="/mine-hnt/validators">
               <span class="badge badge--secondary">Run a Validator</span>
             </a>
@@ -61,14 +61,14 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <h5 style={{ marginTop: 0 }}>Quick Links</h5>
       <a className="block" href="/mine-hnt/full-hotspots">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Approved Makers
-      </a>
+      </a><br>
       <a className="block" href="/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Maker Approval and
         Auditing
-      </a>
+      </a><br>
       <a className="block" href="/mine-hnt/data-only-hotspots">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Data Only Hotspots
-      </a>
+      </a><br>
     </div>
   </div>
   <div class="row">
@@ -77,8 +77,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <h3>Full Hotspots</h3>
         <p style={{ marginBottom: 40 }}>
           These Hotspots maintain a full copy of the HNT blockchain, Participate in Proof of
-          Coverage rewards, and get rewarded for forwarding Data Packets. Details{' '}
-          <a href="https://docs.helium.com/mine-hnt/full-hotspots">can be found here</a>.
+          Coverage rewards, and get rewarded for forwarding Data Packets. Details can be found
+          <a href="https://docs.helium.com/mine-hnt/full-hotspots">here</a>.
         </p>
       </div>
     </div>
@@ -87,8 +87,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <h3>Light Hotspots</h3>
         <p style={{ marginBottom: 40 }}>
           These Hotspots use Validators to get information about the HNT blockchain, Participate in
-          Proof of Coverage rewards, and get rewarded for forwarding Data Packets. Details{' '}
-          <a href="https://docs.helium.com/mine-hnt/light-hotspots">can be found here</a>.
+          Proof of Coverage rewards, and get rewarded for forwarding Data Packets. Details can be found
+          <a href="https://docs.helium.com/mine-hnt/light-hotspots">here</a>.
         </p>
       </div>
     </div>
@@ -97,8 +97,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <h3>Data Only Hotspots</h3>
         <p style={{ marginBottom: 40 }}>
           These Hotspots use Validators to get information about the HNT blockchain, and get
-          rewarded for forwarding Data Packets. Details{' '}
-          <a href="https://docs.helium.com/mine-hnt/data-only-hotspots">can be found here</a>.
+          rewarded for forwarding Data Packets. Details can be found 
+          <a href="https://docs.helium.com/mine-hnt/data-only-hotspots">here</a>.
         </p>
       </div>
     </div>
@@ -106,8 +106,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <div>
         <h3>Maker Apps</h3>
         <p style={{ marginBottom: 40 }}>
-          Makers have their own App to perform Hotspot onboarding, diagnostics, and troubleshooting.{' '}
-          <a href="/mine-hnt/maker-apps">Read more here</a>
+          Makers have their own App to perform Hotspot onboarding, diagnostics, and troubleshooting. Read more
+          <a href="/mine-hnt/maker-apps">here</a>
         </p>
       </div>
     </div>
@@ -127,10 +127,10 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
           </h2>
           <div>
             <a href="/mine-hnt/validators/mainnet/deployment-guide">
-              <span class="badge badge--secondary">Deployment Guide</span>
+              <span class="badge badge--secondary">Deployment Guide</span><br>
             </a>
             <a href="/mine-hnt/validators/requirements/">
-              <span class="badge badge--secondary">Requirements</span>
+              <span class="badge badge--secondary">Requirements</span><br>
             </a>
             <a href="/mine-hnt/validators/penalties">
               <span class="badge badge--secondary">Penalties</span>
@@ -141,3 +141,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     </div>
   </div>
 </div>
+<h2>Hotspot Optimization</h2>
+<a href="https://tanny.gitbook.io/tannys-helium-support/optimization/roi" target="_blank">ROI</a><br>
+<a href="https://tanny.gitbook.io/tannys-helium-support/optimization/location" target="_blank">Location</a>
+
