Added my tech support fanpage
Not sure where it belongs, you can stick it wherever you think it fits. Disclaimed my distinction from Helium/Nova.

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -241,3 +241,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     </div>
   </div>
 </div>
+<h2>General Support Guide</h2>
+<p><i>Community driven, not affiliated with Helium or Nova.</i></p>
+<a href="https://github.com/ilovespectra/heliumhub" target="_blank">Helium Support Hub</a>
