link cleanup and whitespace padding for formatting

--- a/docs/use-the-network/devices/ready-to-use/rakwireless/rak7204.mdx
+++ b/docs/use-the-network/devices/ready-to-use/rakwireless/rak7204.mdx
@@ -35,16 +35,20 @@ The RAK7204 WisNode Sense Home is an LPWAN node with integrated environmental se
 * [Quick Start Guide](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7204/Quickstart/)
 * [Datasheet](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7204/Datasheet/)
 * [AT Command Manual](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7204/AT-Command-Manual/)
-* [Store: RAK7204 WisNode Sense Home](https://store.rakwireless.com/products/rak7204-lpwan-environmental-node?utm_source=RAK7204WisNodeSense&utm_medium=Document&utm_campaign=BuyFromStore&variant=29841927831597)
+* [Store: RAK7204 WisNode Sense Home](https://store.rakwireless.com/products/rak7204-lpwan-environmental-node)
 
 :::info
-[The WisNode Sense Home (RAK7204)](https://store.rakwireless.com/products/rak7204-lpwan-environmental-node?utm_source=RAK7204WisNodeSense&utm_medium=Document&utm_campaign=BuyFromStore&variant=29841927831597) is permanently out of stock. As an alternative product, we recommend [RAK WisBlock Weather Monitor Kit](https://store.rakwireless.com/products/wisblock-kit-1-weather-monitor?variant=37637925372102)
+
+[The WisNode Sense Home (RAK7204)](https://store.rakwireless.com/products/rak7204-lpwan-environmental-node) is permanently out of stock. As an alternative product, we recommend [RAK WisBlock Weather Monitor Kit](https://store.rakwireless.com/products/wisblock-kit-1-weather-monitor?variant=37637925372102)
+
 :::
 
 ## Connecting to Helium (The People's Network) 
 
 :::tip
+
 Before going through each and every step in Connecting the RAK7204 to Helium, it is recommended to check first our [Quick Start Guide](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7204/Quickstart/).
+
 :::
 
 Helium has quickly become the most widespread LPWAN communal network with more than 27,000 devices deployed globally. All the RAKwireless node products are compatible with it and the process of adding a device to the network is intuitive and straightforward. This section will focus on giving a brief guide on how to connect the RAK7204 to the network console, assuming that there is a Helium Hotspot within range.
