--- a/docs/use-the-network/devices/ready-to-use/rakwireless/rak2171.mdx
+++ b/docs/use-the-network/devices/ready-to-use/rakwireless/rak2171.mdx
@@ -107,7 +107,7 @@ Before you dive into registering the device in the Helium console and creating t
   )}
 />
 
-2. To create an integration, click on the **Add New Integration** button. A list of the available integrations will appear. As for this guide, click **Datacake**. For further information, refer to the [**Integrations** documentation](https://docs.helium.com/use-the-network/console/integrations/).
+2. To create an integration, click on the **Add New Integration** button. A list of the available integrations will appear. As for this guide, click **Datacake**. For further information, refer to the [**Integrations** documentation](/use-the-network/console/integrations/).
 
 <img
   src={useBaseUrl(
