--- a/docs/use-the-network/devices/ready-to-use/rakwireless/rak7204.mdx
+++ b/docs/use-the-network/devices/ready-to-use/rakwireless/rak7204.mdx
@@ -2,26 +2,28 @@
 id: rak7204
 sidebar_label: RAK7204 WisNode Sense Home
 title: RAK7204 WisNode Sense Home
-description: RAK7204 comes in a compact size that serves as an environmental monitoring station. With its high-precision sensors, it can measure changes in temperature, humidity, gas pressure, and indoor air quality. All the accumulated data can be sent to the gateway and then forward it to the Cloud.
+description:
+  RAK7204 comes in a compact size that serves as an environmental monitoring station. With its
+  high-precision sensors, it can measure changes in temperature, humidity, gas pressure, and indoor
+  air quality. All the accumulated data can be sent to the gateway and then forward it to the Cloud.
 slug: /use-the-network/devices/ready-to-use/rakwireless/rak7204
 ---
 
-import useBaseUrl from "@docusaurus/useBaseUrl";
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
-<img
-  src={useBaseUrl(
-    "img/use-the-network/devices/ready-to-use/rakwireless/rak7204/RAK7204.png"
-  )}
-/>
+<img src={useBaseUrl('img/use-the-network/devices/ready-to-use/rakwireless/rak7204/RAK7204.png')} />
 
 ## Overview
 
-The RAK7204 WisNode Sense Home is an LPWAN node with integrated environmental sensors. The high-precision environmental sensors, can measure changes in temperature, humidity, gas pressure and provide an indoor air quality index. All the accumulated data can be send to a gateway in order for it to be forwarded to the Cloud.
-
+The RAK7204 WisNode Sense Home is an LPWAN node with integrated environmental sensors. The
+high-precision environmental sensors, can measure changes in temperature, humidity, gas pressure and
+provide an indoor air quality index. All the accumulated data can be send to a gateway in order for
+it to be forwarded to the Cloud.
 
 ### Product Features
 
-- Measurement of a variety of environmental parameters: **Temperature**, **Humidity**, **Gas Pressure** and **Indoor Air Quality (IAQ)**
+- Measurement of a variety of environmental parameters: **Temperature**, **Humidity**, **Gas
+  Pressure**, and **Indoor Air Quality (IAQ)**
 - **BOSCH BME680** Integrated Environmental Unit
 - **LoRaWAN 1.0.2** fully compliant
 - Low power operation and standby current of less than 15 uA
@@ -31,73 +33,77 @@ The RAK7204 WisNode Sense Home is an LPWAN node with integrated environmental se
 - **Battery life of more than 2 years** (At 15 minute data transmission interval)
 - Compact in size, easy to install and maintain.
 
-### Useful Resources 
-* [Quick Start Guide](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7204/Quickstart/)
-* [Datasheet](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7204/Datasheet/)
-* [AT Command Manual](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7204/AT-Command-Manual/)
-* [Store: RAK7204 WisNode Sense Home](https://store.rakwireless.com/products/rak7204-lpwan-environmental-node?utm_source=RAK7204WisNodeSense&utm_medium=Document&utm_campaign=BuyFromStore&variant=29841927831597)
+### Useful Resources
+
+- [Quick Start Guide](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7204/Quickstart/)
+- [Datasheet](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7204/Datasheet/)
+- [AT Command Manual](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7204/AT-Command-Manual/)
+- [Store: RAK7204 WisNode Sense Home](https://store.rakwireless.com/products/rak7204-lpwan-environmental-node)
 
 :::info
-[The WisNode Sense Home (RAK7204)](https://store.rakwireless.com/products/rak7204-lpwan-environmental-node?utm_source=RAK7204WisNodeSense&utm_medium=Document&utm_campaign=BuyFromStore&variant=29841927831597) is permanently out of stock. As an alternative product, we recommend [RAK WisBlock Weather Monitor Kit](https://store.rakwireless.com/products/wisblock-kit-1-weather-monitor?variant=37637925372102)
+
+[The WisNode Sense Home (RAK7204)](https://store.rakwireless.com/products/rak7204-lpwan-environmental-node)
+is permanently out of stock. As an alternative product, we recommend
+[RAK WisBlock Weather Monitor Kit](https://store.rakwireless.com/products/wisblock-kit-1-weather-monitor?variant=37637925372102)
+
 :::
 
-## Connecting to Helium (The People's Network) 
+## Connecting to Helium (The People's Network)
 
 :::tip
-Before going through each and every step in Connecting the RAK7204 to Helium, it is recommended to check first our [Quick Start Guide](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7204/Quickstart/)
+
+Before going through each and every step in Connecting the RAK7204 to Helium, it is recommended to
+check first our
+[Quick Start Guide](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7204/Quickstart/).
+
 :::
 
-Helium has quickly become the most widespread LPWAN communal network with more than 27,000 devices deployed globally. All our node products are compatible with it and the process of adding a device to the network is intuitive and straightforward. This section will focus on giving a brief guide on how to connect the RAK7204 to the network console, assuming that there is a Helium Hotspot within range.
+Helium has quickly become the most widespread LPWAN communal network with more than 27,000 devices
+deployed globally. All the RAKwireless node products are compatible with it and the process of
+adding a device to the network is intuitive and straightforward. This section will focus on giving a
+brief guide on how to connect the RAK7204 to the network console, assuming that there is a Helium
+Hotspot within range.
 
-Log in or create your account [here](https://www.helium.com/console):
+Log in or create your account [here](https://www.helium.com/console).
 
-<img
-  src={useBaseUrl(
-    "img/use-the-network/devices/ready-to-use/rakwireless/rak7204/1.png"
-  )}
-/>
+<img src={useBaseUrl('img/use-the-network/devices/ready-to-use/rakwireless/rak7204/1.png')} />
 
+Once registered/logged in, you will end up at the home page where you can see your function tree on
+the left and your DC balance at the tops as well as a number of useful links.
 
-Once registered/logged in you will end up at the home page where you can see your function tree on the left and your DC balance at the tops as well as a number of useful links.
+<img src={useBaseUrl('img/use-the-network/devices/ready-to-use/rakwireless/rak7204/home.png')} />
 
-<img
-  src={useBaseUrl(
-    "img/use-the-network/devices/ready-to-use/rakwireless/rak7204/home.png"
-  )}
-/>
+Go to the **Devices** section in the function tree. There will be no registered devices if this is
+your first time doing this. To add a device, click the **+ Add Device** button and get started.
 
+<img src={useBaseUrl('img/use-the-network/devices/ready-to-use/rakwireless/rak7204/no_dev.png')} />
 
-Go to the "Devices" section in the function tree. If this is your first time doing this there will be no devices registered. Click the "+ Add Device" button to get started
-
-
-<img
-  src={useBaseUrl(
-    "img/use-the-network/devices/ready-to-use/rakwireless/rak7204/no_dev.png"
-  )}
-/>
-
-A window will pop up with a set of field containing the device parameters required for its registration:
+A window will pop up with a set of field containing the device parameters required for its
+registration.
 
 <img
-  src={useBaseUrl(
-    "img/use-the-network/devices/ready-to-use/rakwireless/rak7204/red_device.png"
-  )}
+  src={useBaseUrl('img/use-the-network/devices/ready-to-use/rakwireless/rak7204/red_device.png')}
 />
 
-
-Fill a name of your choosing. The Dev EUI, App EUI and App Key (press the eye icon to reveal the values) will have random values generated for you by default. You can manually replace them with values of your own. For the purpose of this tutorial we will stay with the default. Press the "Submit" button and you are done.
+Fill in a name of your choosing. The **Dev EUI**, **App EUI**, and **App Key** will have random
+values generated for you by default. Press the eye icon to reveal the values. You can manually
+replace them with values of your own. For this tutorial, default values are used. Press the
+**Submit** button, and you are done.
 
 <img
-  src={useBaseUrl(
-    "img/use-the-network/devices/ready-to-use/rakwireless/rak7204/reged_device.png"
-  )}
+  src={useBaseUrl('img/use-the-network/devices/ready-to-use/rakwireless/rak7204/reged_device.png')}
 />
 
-Now your RAK7204 is registered and is awaiting activation. For this to happen we need to import the Dev EUI, App EUI and App Key in the RAK7204 using the RAK Serial Port Tool
+Now your RAK7204 is registered and is awaiting activation. For this to happen we need to import the
+**Dev EUI**, **App EUI**, and **App Key** in the RAK7204 using the
+[RAK Serial Port Tool](https://downloads.rakwireless.com/en/LoRa/Tools/RAK_SERIAL_PORT_TOOL_V1.2.1.zip).
 
-Open the tool, select the desired port (default baud rate) and open it. Then start importing your settings.
+Open the tool, select the desired port (default baud rate) and open it. Then start importing your
+settings.
 
-Configure your LoRa band and activation mode. This tutorial will be using the EU868 band and OTAA (only option available for now with Helium) with device class A (default one, does not need configuring).
+Configure your LoRa band and activation mode. This tutorial will be using the EU868 band and OTAA
+(only option available for now with Helium) with device class A (default one, does not need
+configuring).
 
 - Regional band and activation mode setting
 
@@ -108,7 +114,6 @@ at+set_config=lora:join_mode:0
 ```
 at+set_config=lora:region:EU868
 ```
-
 
 - Enter the Dev UI
 
@@ -131,14 +136,15 @@ at+set_config=lora:app_eui:XXXX
 Finally fill in the App key with the command:
 
 ```
-at++set_config=lora:app_key:XXXX
+at+set_config=lora:app_key:XXXX
 ```
 
 - Join Network
 
 Finish executing the join command in order for the node to initiate the join procedure.
 
-Once the procedure is initiated and successfully complete you will have a notification in the serial console
+Once the procedure is initiated and successfully complete you will have a notification in the serial
+console
 
 ```
 at+join
@@ -146,17 +152,9 @@ at+join
 
 You output should resemble the one in figure below:
 
-<img
-  src={useBaseUrl(
-    "img/use-the-network/devices/ready-to-use/rakwireless/rak7204/join.png"
-  )}
-/>
+<img src={useBaseUrl('img/use-the-network/devices/ready-to-use/rakwireless/rak7204/join.png')} />
 
+If you take a look at the Helium console, you will also see the join request packets both in the
+graph and event log. Your node is now a part of the Helium Network.
 
-If you take a look at the Helium console you will also see the join request packets both in the graph and event log. Your node is now a part of the Helium Network :tada:.
-
-<img
-  src={useBaseUrl(
-    "img/use-the-network/devices/ready-to-use/rakwireless/rak7204/joined.png"
-  )}
-/>
+<img src={useBaseUrl('img/use-the-network/devices/ready-to-use/rakwireless/rak7204/joined.png')} />
