--- a/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
@@ -137,3 +137,15 @@ This should help you figure out the number of `DeviceAddr` that is right for you
 Moving devices can trigger the same effect as well as they can get an assigned `DeviceAddr` in our Hexagaon and move to another one, potentially causing a conflict as specified above.
 
 ::: 
+
+## Tools
+
+### Devaddr
+
+1. `curl http://localhost:3000/devaddr/json` get all devaddr assignment in json format
+2. Input them in  https://kepler.gl/demo
+
+### CLI
+
+- `router info device <device_id>` find every conflicts for a device
+- `router info hotspot <hotspot_b58>` find every conflicts for a hotspot
