update get event api to include event category

--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -234,9 +234,10 @@ Returns the previous 100 events for the device if found.
 
 _Path Parameters_
 
-| Parameter Name       | Type     | Description        |
-| -------------------- | -------- | ------------------ |
-| device_id (required) | _string_ | UUID of the device |
+| Parameter Name          | Type     | Description        |
+| ----------------------- | -------- | ------------------ |
+| device_id (required)    | _string_ | UUID of the device |
+| sub_category (optional) | _string_ | event category     |
 
 </TabItem>
 <TabItem value="response">
