--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -27,7 +27,7 @@ Network. It is also the primary venue to get support for using the Network.
 
 The Helium Community uses a governance mechanism called **Helium Improvement Proposals** (known as
 "HIPs"). Modeled on BIPs from the Bitcoin community, HIPs are used to introduce, debate, and
-approve/reject new changes to major elements of the Network like the core blockchain, HNT token
+approve/reject new changes to major elements of the Network like the core blockchain, $HNT token
 economics, and Network governance itself.
 
 In the earliest phases it's best to vet an idea with the Helium community
