--- a/docs/wallets/app-wallet/transfer-hotspot.mdx
+++ b/docs/wallets/app-wallet/transfer-hotspot.mdx
@@ -14,19 +14,22 @@ owners of the Network to transfer their Hotspots to another owner.
 
 This feature enables Hotspot owners to transfer ownership of a Hotspot to another user. Once
 transferred, the new owner will receive all future Hotspot mining rewards.
+The Helium Wallet app (Black Icon) cannot transfer hotspots between wallets.
+As of today (2nd July 2022) the only app that can manage and transfer hotspots held on 24 word wallets is the Bobber App for Bobcats.
+Do not transfer hotspots to wallets created with 24 words unless the Hotspot Management App supports 24 words.
 
 ### Requirements
 
 - Only the wallet that owns the Hotspot on the blockchain can initiate a transfer.
-- These steps are for Seller with app version 3.10.0
+- These steps are for Seller with Helium Hotspot app (Blue Icon) version 3.10.0 or higher, other vendor Hotspot Management apps will make the same checks. 
 
 * Parties do not need to be physically next to the Hotspot for transfer to succeed.
 
-- This feature requires both users to have a valid Helium wallet account
+- This feature requires both users to have a valid Helium wallet account. 24 word wallets are not supported by the Helium Hotspot App
 - The Seller pays the transaction fee of ~55,000 DC.
-- Hotspots must have had Proof-of-Coverage activity (beaconing or witnessing) or Data Transfer
+- Hotspots must have had LoraWAN Proof-of-Coverage activity (Issued a Broadcast Beacon or Witnessed a valid or invalid Beacon) or performed LoraWAN Data Transfer
   activity in the last 1200 blocks (approximately 20 hours) in order to be transferred. This is to
-  ensure the Hotspot is fully functional for the protection of the buyer.
+  ensure the Hotspot is functioning on the network for the protection of the buyer.
 
 :::warning
 
